--- a/style.css
+++ b/style.css
@@ -5,17 +5,6 @@ html, body{
   width: 100%;
 }
 
-video {
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-}
-
-#camera--view
-{
-    transform: rotateY(180deg);
-    -webkit-transform:rotateY(180deg); /* Safari and Chrome */
-    -moz-transform:rotateY(180deg); /* Firefox */
-}
 
 #camera, #camera--view, #camera--sensor, #camera--output{
     position: fixed;
@@ -25,8 +14,8 @@ video {
 }
 
 #camera--view, #camera--sensor, #camera--output{
-    transform: scaleX(-1);
-    filter: FlipH;
+    transform: scaleX(1);
+    /* filter: FlipH; */
 }
 
 #camera--trigger{
